namespace java com.zero.thrift.protocol.request

struct TUserParam
{
    1: required string id;
}

struct TCompanyParam
{
    1: required string userName;
}